Bug 413236 - "nodoka theme git: focus indicator for location bar covers too large an area" [p=twanno@lycos.nl (Teune van Steeg) r=dao r=Ryan a1.9=beltzner]
UltraBlame original commit: 31067844bfd47468bd66aaccc5a3fde441a330f8

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -934,10 +934,17 @@ toolbar[iconsize="small"] #paste-button[disabled="true"] {
   -moz-binding: url(chrome://browser/skin/browser.xml#autocomplete-security-wrapper);
 }
 
-
 #autocomplete-security-wrapper {
+  
   direction: ltr;
   -moz-box-align: center;
+  
+  margin-right: -3px;
+}
+
+#urlbar[chromedir="rtl"] > .autocomplete-textbox-container > #autocomplete-security-wrapper {
+  margin-right: 0px;
+  margin-left: -3px;
 }
 
 
